--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
-{
+{  "homepage": "https://abdellahfihri.github.io/deployPortfolio",
   "name": "react.protfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "aos": "^2.3.4",
     "bootstrap": "^4.3.1",
-    "gh-pages": "^2.1.1",
+  
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "reactstrap": "^8.1.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -31,5 +32,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
   }
 }
