--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{  "homepage": "https:abdellahFihri/github.com/portfolio",
+{  "homepage": "http://abdellahfihri.github.io/staticUpdated",
   "name": "react.protfolio",
   "version": "0.1.0",
   "private": true,
