--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "aos": "^2.3.4",
     "bootstrap": "^4.3.1",
     "heroku": "^7.35.0",
+    "node-sass": "^4.13.0",
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.2",
     "react-scripts": "^3.3.0",
+    "react-snow-effect": "^1.2.0",
     "reactstrap": "^8.1.1"
   },
   "scripts": {
