--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "private": true,
   "dependencies": {
     "aos": "^2.3.4",
-    "bootstrap": "^4.3.1",
-    "heroku": "^7.35.0",
-    "node-sass": "^4.13.0",
-    "react": "^16.10.2",
-    "react-bootstrap": "^1.0.0-beta.14",
-    "react-dom": "^16.10.2",
-    "react-scripts": "^3.3.0",
+    "bootstrap": "^4.5.0",
+    "heroku": "^7.42.3",
+    "node-sass": "^4.14.1",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.2.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "^3.4.1",
     "react-snow-effect": "^1.2.0",
-    "reactstrap": "^8.1.1"
+    "reactstrap": "^8.5.1"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -37,6 +37,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^2.1.1"
+    "gh-pages": "^2.2.0"
   }
 }
